Update Project 03: Add brief description in header

--- a/day03-css-variables/styles.css
+++ b/day03-css-variables/styles.css
@@ -16,6 +16,11 @@
         text-align: center;
       }
 
+      header {
+        max-width: 80%;
+        margin: 10px auto;
+      }
+
       .hl {
         color: var(--base);
       }
