--- a/day06-type-ahead/styles.css
+++ b/day06-type-ahead/styles.css
@@ -53,6 +53,7 @@ input.search {
   display: flex;
   justify-content: space-between;
   text-transform: capitalize;
+  cursor: pointer;
 }
 
 .suggestions li:nth-child(even) {
@@ -71,4 +72,50 @@ span.population {
 
 .hl {
   background: #ffc600;
+}
+
+.popup {
+    background-color: aliceblue;
+    width: 60%;
+    min-width: 300px;
+    display: none;
+    justify-content: center;
+    border-radius: 10px;
+    justify-self: center;
+    align-content: center;
+    position: sticky;
+    bottom: 20%;
+    z-index: 10;
+}
+            
+.popup ul {
+    padding: 2% 5%;
+}
+
+.popup ul li {
+    list-style: none;
+    margin: 0;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    text-transform: capitalize;
+}
+
+.close-button {
+    display: flex;
+    justify-self: center;
+    margin-bottom:  10px;
+    background-color: black;
+    color: aliceblue;
+    font-size: 20px;
+    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 0 4px 5px black;
+    transition: all 0.1s ease;
+    padding: 5px 10%;
+    cursor: pointer;
+}
+
+.close-button:hover {
+    transform: scale(1.1);
 }
