--- a/day06-type-ahead/styles.css
+++ b/day06-type-ahead/styles.css
@@ -86,6 +86,7 @@ span.population {
     position: sticky;
     bottom: 20%;
     z-index: 10;
+    box-shadow: 0 4px 10px black;
 }
             
 .popup ul {
