--- a/day06-type-ahead/styles.css
+++ b/day06-type-ahead/styles.css
@@ -22,12 +22,11 @@ input {
 }
 
 input.search {
-  margin: 0;
+  margin: 0 auto;
   text-align: center;
   outline: 0;
   border: 10px solid #F7F7F7;
-  width: 120%;
-  left: -10%;
+  width: 100%;
   position: relative;
   top: 10px;
   z-index: 2;
@@ -87,6 +86,7 @@ span.population {
     bottom: 20%;
     z-index: 10;
     box-shadow: 0 4px 10px black;
+    margin: 0 auto;
 }
             
 .popup ul {
@@ -105,6 +105,7 @@ span.population {
 .close-button {
     display: flex;
     justify-self: center;
+    margin: 0 auto;
     margin-bottom:  10px;
     background-color: black;
     color: aliceblue;
