Update: set video thumbnail

--- a/day11-custom-video-player/styles.css
+++ b/day11-custom-video-player/styles.css
@@ -23,6 +23,7 @@ body {
 }
 
 .player {
+  width: 90%;
   max-width: 750px;
   border: 5px solid rgba(0,0,0,0.2);
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
@@ -105,7 +106,6 @@ body {
   width: 50%;
   background: #ffc600;
   flex: 0;
-  flex-basis: 50%;
 }
 
 /* unholy css to style input type="range" */
